Remove references to old name, "layout presets"

--- a/Sitecore.BaseLayouts.Website/Views/Shared/MainLayout.cshtml
+++ b/Sitecore.BaseLayouts.Website/Views/Shared/MainLayout.cshtml
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Layout Presets</title>
+    <title>Base Layouts</title>
     <link href="/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="/Content/bootstrap-theme.min.css" rel="stylesheet" />
 </head>
